# arcade

./: .gitignore  CMakeLists.txt  Makefile
.github/workflow/: mirror.yml
.github/workflows/: mirror.yml
include/: Common.hpp  Core.hpp  DLLoader.hpp  DirectoryScanner.hpp  Errors.hpp  IGame.hpp  IGraphic.hpp  MenuSelector.hpp  PluginApi.hpp
src/: Core.cpp  MenuSelector.cpp  main.cpp
src/games/Pacman/: PacmanModule.cpp
src/games/Snake/: SnakeModule.cpp
src/graphicals/Ncurses/: NcursesModule.cpp
src/graphicals/SDL2/: SDL2Module.cpp
src/graphicals/SFML/: SfmlModule.cpp
src/graphicals/Sdl2/: Sdl2Module.cpp
src/graphicals/Sfml/: SfmlModule.cpp
